fix(03-flex-header-2): replace gaps and padding-left of links ul to 16px

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -60,8 +60,8 @@ ul {
 
 .links {
   display: flex;
-  padding-left: 8px;
-  gap: 8px;
+  padding-left: 16px;
+  gap: 16px;
 }
 
 .profile-container {
